Begone equalsIgnoreCase hello switch